--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.8.0",
     "expo": "~54.0.10",
+    "expo-audio": "~1.0.15",
     "expo-av": "~16.0.7",
     "expo-status-bar": "~3.0.8",
     "moti": "^0.30.0",
