--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "expo": "~54.0.10",
     "expo-audio": "~1.0.15",
     "expo-av": "~16.0.7",
+    "expo-camera": "^17.0.9",
+    "expo-image-picker": "^17.0.8",
     "expo-status-bar": "~3.0.8",
     "moti": "^0.30.0",
     "react": "19.1.0",
