--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-audio": "~1.0.15",
     "expo-av": "~16.0.7",
     "expo-camera": "^17.0.9",
+    "expo-file-system": "^19.0.20",
     "expo-image-picker": "^17.0.8",
     "expo-status-bar": "~3.0.8",
     "moti": "^0.30.0",
